ec2.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Ec2 instance with httpd'
Parameters:
  VpcId:
    Description: Select VPC
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Default: IBex-Dev-PubblicA
    Description: Select Subnets
    Type: AWS::EC2::Subnet::Id
  KeyPair:
    Description: Select Key pair
    Type: AWS::EC2::KeyPair::KeyName 
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t1.micro
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
  CidrIp:   
    Description: Enter Cidr range
    Type: String
    Default: 0.0.0.0/0
Resources:
  MyEC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPair
      ImageId: ami-0cb0e70f44e1a4bb5
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - Ref: MySecurityGroup
      UserData:
        "Fn::Base64":
          !Sub |
          #!/bin/bash
          sudo -i
          yum update -y
          touch /opt/efs.sh
          chmod 777 /opt/efs.sh
          printf '#/bin/bash
          yum install amazon-efs-utils -y
          mkdir -p /efs
          echo "${FileSystem}.efs.ap-south-1.amazonaws.com:/ /efs nfs4 defaults 0 0" >> /etc/fstab' > /opt/efs.sh
          bash /opt/efs.sh    
          sudo mount -a

      Tags:
        - Key: Name
          Value: Ibex-Dev-EFSupdated

  MySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Security Group for EC2 to allow SSH from Bastion and expose HTTP 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref CidrIp
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22   
          CidrIp: !Ref CidrIp
      VpcId: !Ref VpcId


  MountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: VpcId
      GroupDescription: Security group for mount target
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '2049'
        ToPort: '2049'
        CidrIp: 0.0.0.0/0 
  FileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
      FileSystemTags:
      - Key: Name
        Value: Ibex-Dev-EFS  
  MountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: FileSystem
      SubnetId: !Ref SubnetId
      SecurityGroups:
       - Ref: MountTargetSecurityGroup
