vpcmain.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC with enabling Flow logs'
Parameters:
    VpcCidr:
      Type: String
      Default: "10.0.0.0/16"
    subnetCount:
      Type: String
      Default: "8"
    maskSizeForIPv4:
      Type: String
      Default: "8"
Resources:
#CREATING VPC
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: Ibex-Dev-VPC
#Creating 2 public and private subnets          
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [0, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ibex-Dev-PublicA
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [1, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ibex-Dev-PublicB
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [2, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ibex-Dev-PublicC
  PublicSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [3, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ibex-Dev-PublicD                    
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [4, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      Tags:
        - Key: Name
          Value: Ibex-Dev-PrivateA
  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [5, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      Tags:
        - Key: Name
          Value: Ibex-Dev-PrivateB
  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [6, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      Tags:
        - Key: Name
          Value: Ibex-Dev-PrivateC
  PrivateSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: ""
      VpcId: !Ref myVPC
      CidrBlock: !Select [7, !Cidr [!Ref VpcCidr, !Ref subnetCount, !Ref maskSizeForIPv4]]
      Tags:
        - Key: Name
          Value: Ibex-Dev-PrivateD     
#creating a igw and attaching to Testvpc
  VpcIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Ibex-Dev-Igw
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref myVPC
      InternetGatewayId: !Ref VpcIgw
#Creating EIP for NAT Gateway
  eipTest:
    Type: AWS::EC2::EIP
    Properties:
     Domain: vpc
#Creating Natgateway
  testNat:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt 'eipTest.AllocationId'
      SubnetId: !Ref PublicSubnetA
      Tags: 
        - Key: Name
          Value: Ibex-Dev-Natgateway
#Create Route tables          
  PublicRt:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: Ibex-Dev-PublicRt
  PrivateRt:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: Ibex-Dev-PrivateRt
#Enabling IGW and Natgateway routes
  Publicroutes:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRt
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VpcIgw
  Privateroutes:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRt
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref testNat
#route table association      
  PublicARouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRt
  PublicBRouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRt
  PublicCRouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetC
      RouteTableId: !Ref PublicRt
  PublicDRouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetD
      RouteTableId: !Ref PublicRt    
  PrivateARouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRt
  PrivateBRouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRt 
  PrivateCRouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetC
      RouteTableId: !Ref PrivateRt
  PrivateDRouteSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetD
      RouteTableId: !Ref PrivateRt
